[package]
name = "nodekill"
description = "Allows you to get rid of node_modules, fast!"
lisence = "MIT"
repository = "https://github.com/codeaye/nodekill"
version = "1.0.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
fs_extra = "1.2.0"
glob = "0.3.0"
indicatif = "0.17.0"
inquire = "0.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"